# polyphony

./: Dockerfile  LICENSE  README.md  commands
Battery-TA-RWARE/: .gitignore  README.md  log1.txt  log11.txt  log2.txt  log3.txt  log4.txt  log_ll1.txt  logs11.txt  logs12.txt  pyproject.toml
Battery-TA-RWARE/jobs/: central_llm_ollama.def  run_centralized_llm_pelle.sbatch  run_centralized_llm_pelle_singularity.sbatch
Battery-TA-RWARE/rag_db/: chroma.sqlite3
Battery-TA-RWARE/scripts/: analyze_experiment_results.py  build_rag_index.py  custom_model.py  evaluate_ppo.py  experiment_config.example.json  fixed_prompt_builder.py  plot_battery.py  run_centralized_llm_experiments.py  run_heuristic.py  run_llm.py  run_obj2_centralized_llm.py  run_obj2_shared_context_llm.py  run_shared_context_llm_expt.py  state_translation_helper.py  train_ppo.py  train_utils.py
Battery-TA-RWARE/tarware/: __init__.py  astar.py  definitions.py  heuristic.py  rendering.py  warehouse.py
Battery-TA-RWARE/tests/: test_busy_replan.py  test_obj2_prompts.py
Battery-TA-RWARE/transcripts/: episode_000_seed_0.json  episode_001_seed_1.json  episode_002_seed_2.json  episode_003_seed_3.json  episode_004_seed_4.json  episode_005_seed_5.json  episode_006_seed_6.json  episode_007_seed_7.json  episode_008_seed_8.json  episode_009_seed_9.json  episode_010_seed_10.json  episode_011_seed_11.json  episode_012_seed_12.json  episode_013_seed_13.json  episode_014_seed_14.json  episode_015_seed_15.json  episode_016_seed_16.json  episode_017_seed_17.json  episode_018_seed_18.json  episode_019_seed_19.json
(+266 files in other folders)
