[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="tarware"
version="1.1.0"
description="Task-Assignment Multi-Robot Warehouse environment for reinforcement learning"
readme = {file = "README.txt", content-type = "text/markdown"}
authors = [
  {name = "Raul Steleac", email = "raulsteleac@ed.ac.uk"},
]
license = {file = "LICENSE"}
classifiers=[
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "Programming Language :: Python :: 3.9",
    ]
dependencies = [
    "numpy",
    "gymnasium",
    "six==1.16.0",
    "pyglet==1.5.27",
    "networkx==3.2.1"
]

[project.optional-dependencies]
test = ["pytest"]
llm = [
    "langchain>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=0.5.0",
]

[project.urls]
Repository  = "https://github.com/raulsteleac/task-assignment-robotic-warehouse.git"

[tool.setuptools]
packages = ["tarware"]
